[package]
name = "duma"
version = "0.2.0"
authors = ["Matt Gathu <mattgathu@gmail.com>"]
edition = "2018"
description = "A minimal file downloader"
documentation = "https://github.com/mattgathu/duma"
homepage = "https://github.com/mattgathu/duma"
repository = "https://github.com/mattgathu/duma"
readme = "README.md"
keywords = ["http", "client", "cli", "file", "download"]
resolver = "2"
categories = [
	"web-programming::http-client",
	"command-line-utilities",
	"network-programming",
]

[lib]
name = "duma"
path = "src/lib.rs"

[[bin]]
name = "duma"
path = "src/main.rs"

license = "MIT"
edition = "2018"

[features]
default = ["indicatif", "console", "clap", "enable-ftp"]
enable-ftp = ["ftp"]
test = ["clap"]

[dependencies]
indicatif = { version = "0.15.0", optional = true }
console = { version = "0.13.0", optional = true }
clap = { version = "2.33.2", optional = true }
ftp = { version = "3.0.1", optional = true }
url = "1.7.2"
reqwest = { version = "0.11.0", features = ["json", "rustls-tls", "gzip"] }
anyhow = "1"
log = "0.4"
simple_logger = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.0"

[dev-dependencies]
assert_cmd = "0.11"
tiny_http = "0.6.2"
assert_fs = "0.11"
predicates = "1.0"
